Bug 1054173 - Do not fail connections when receiving request headers. r=mcmanus