netwerk/protocol/http/Http2Stream.cpp
@@ -848,7 +848,7 @@ Http2Stream::ConvertResponseHeaders(Http2Decompressor *decompressor,
   nsresult rv =
     decompressor->DecodeHeaderBlock(reinterpret_cast<const uint8_t *>(aHeadersIn.BeginReading()),
                                     aHeadersIn.Length(),
-                                    aHeadersOut);
+                                    aHeadersOut, false);
   if (NS_FAILED(rv)) {
     LOG3(("Http2Stream::ConvertHeaders %p decode Error\n", this));
     return NS_ERROR_ILLEGAL_VALUE;
@@ -902,7 +902,7 @@ Http2Stream::ConvertPushHeaders(Http2Decompressor *decompressor,
   nsresult rv =
     decompressor->DecodeHeaderBlock(reinterpret_cast<const uint8_t *>(aHeadersIn.BeginReading()),
                                     aHeadersIn.Length(),
-                                    aHeadersOut);
+                                    aHeadersOut, true);
   if (NS_FAILED(rv)) {
     LOG3(("Http2Stream::ConvertPushHeaders %p Error\n", this));
     return NS_ERROR_ILLEGAL_VALUE;
